--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
 		"electron-window-state-manager": "latest",
 		"express": "latest",
 		"fs-extra": "latest",
+		"flac-metadata": "latest",
 		"mkdirp": "latest",
 		"node-id3": "latest",
 		"package.json": "latest",
