Added request retry, connections will retry if fail.
When any request fails because of internet connection, it will retry unlimited times untill it will be able to get response.

--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
 		"package.json": "latest",
 		"request": "latest",
 		"socket.io": "latest",
-		"winston": "latest"
+		"winston": "latest",
+		"requestretry": "latest"
 	}
 }
