Updated version to 3.0.13 and Improved MP3 tags again

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
 		"win":{
 			"icon": "res/icon.ico"
 		},
+		"linux":{
+			"target": "AppImage"
+		},
 		"mac":{
 			"icon": "res/icon.icns"
 		},
