Added replaygain tag, Fixed incomplete audio file and Fixed alternative property(Another patch of Deezer)

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"electron-builder": "latest"
 	},
 	"scripts": {
-		"dist": "electron-builder --ia32 --x64",
+		"dist": "electron-builder",
 		"pack": "electron-builder --dir",
 		"postinstall": "electron-builder install-app-deps"
 	},
