--- a/app/package.json
+++ b/app/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "deezloader-app",
 	"productName": "Deezloader",
-	"version": "3.1.0",
+	"version": "3.2.0",
 	"description": "Download music from Deezer",
 	"main": "main.js",
-	"author": "ExtendLord",
+	"author": "Rackian",
 	"license": "CC-BY-NC-SA-4.0",
 	"dependencies": {
 		"async": "latest",
